
* #13605: Fix ungenerated constraints when they where impossible due to polyvars
  issues
  (Samuel Vivien, review by Florian Angeletti, Richard Eisenberg
   and Jacques Garrigue)

- #13677, #13679: domain.c: remove backup_thread_running to simplify
  concurrent state updates to the backup thread status.
  (Gabriel Scherer, review by Jan Midtgaard and Miod Vallat,
   report by Jan Midtgaard)

- #13703: wrong explanation for some polymorphic-variant subtyping errors
  (Gabriel Scherer, review by Jacques Garrigue,
   report by Wiktor Kuchta and Richard Eisenberg)

- #13710: Support unicode identifiers in comments.
  (Pieter Goetschalckx, review by Florian Angeletti and Gabriel Scherer)

- #13763: Track type of variables bound by as-patterns
  (Leo White, review by Gabriel Scherer, port by Vincent Laviron)

- #13778, #13811: do not warn for unused type declarations when the type is used
  in a first-class module type (`module S with type t = int)`.
  (Florian Angeletti, report by Nicolás Ojeda Bär, review by Gabriel Scherer)

- #13790: Fix bytecode-only build of Cygwin when flexlink is being bootstrapped
  with the compiler.
  (David Allsopp, review by Antonin Décimo and Miod Vallat)

- #13812: Add forgotten check about the validity of the type variable name on
  the right-hand side of `_ as _`.
  (Samuel Vivien, review by Gabriel Scherer)

- #13845: Fix bug in untypeast/pprintast for value bindings with polymorphic
  type annotations.
  (Chris Casinghino, review by Florian Angeletti and Gabriel Scherer)

- #13930, #13933: Fix bugs in recursive values definitions involving
  lazy values that have already been evaluated.
  (Gabriel Scherer, review by Vincent Laviron, report by Vincent Laviron)

- #13867: Fix bug with some recursive bindings of lazy values.
  (Guillaume Bury and Vincent Laviron, review by Stefan Muenzel
   and Gabriel Scherer)

- #13931: fix bugs in nested recursive value definitions.
  (Gabriel Scherer, review by Vincent Laviron,